--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,17 +1,30 @@
 <!-- Chargement des polices pour Storybook uniquement -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+	href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap"
+	rel="stylesheet"
+/>
 
 <style>
-  /* Styles globaux Storybook (complémentaires à Tailwind) */
-  html, body {
-    height: 100%;
-  }
-  body {
-    font-family: 'Lato', ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-    background: #ffffff;
-    color: #0f172a; /* slate-900 */
-  }
+	/* Styles globaux Storybook (complémentaires à Tailwind) */
+	html,
+	body {
+		height: 100%;
+	}
+	body {
+		font-family:
+			'Lato',
+			ui-sans-serif,
+			system-ui,
+			-apple-system,
+			Segoe UI,
+			Roboto,
+			Helvetica,
+			Arial,
+			'Apple Color Emoji',
+			'Segoe UI Emoji';
+		background: #ffffff;
+		color: #0f172a; /* slate-900 */
+	}
 </style>
-
